--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Tasks</title>
-        <link rel="stylesheet" href="www/assert/css/tasks.css"/>
+        <!--link rel="stylesheet" href="www/assert/css/tasks.css"/-->
+        <link rel="stylesheet" href="www/assert/css/marketReport.css"/>
         <link rel="stylesheet" href="www/assert/css/bootstrap.css"/>
         <link rel="stylesheet" href="www/assert/css/jquery.handsontable.full.css"/>
 
@@ -17,6 +18,8 @@
     </head>
 
     <body>
+        <div id="head">
+        </div>
         <div id="app">
         </div>
     </body>
